temp fixed contact button text align

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,9 @@
 .btn {
     font-weight: 500;
     transition: .5s;
+    padding-top:20px;
+    text-align: center;
+    margin:auto;
 }
 
 .btn.btn-primary,
